[package]
name = "disasem"
version = "0.1.0"
edition = "2021"
authors = ["Luke C. J. Currie"]
description = "A simple disassmbler for a subset of X86 instructions"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
num-derive = "0.3.3"
num-traits = "0.2.15"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[profile.release.package."*"]
strip = true
codegen-units = 1
opt-level = "z"
